# human-api

./: .eslintrc.js  .gitignore  .prettierignore  PRODUCTION-README.md  README.md  build-report.json  debug-chunker.js  health-report.md  package-lock.json  package.json  production-config.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.js  vitest.config.ts
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json  vite.config.js  vitest.config.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  crypto.rs  database.rs  main.rs  memory.rs  vault.rs
core/chunk/: chunker.js  chunker.test.js  chunker.test.ts  chunker.ts  processor.js  processor.ts
core/config/: ProductionConfig.js  ProductionConfig.ts
core/crypto/: aes.js  aes.ts  crypto.test.js  crypto.test.ts  encrypt.js  encrypt.ts  index.js  index.ts  kdf.js  kdf.ts  types.js  types.ts
core/embed/: generator.js  generator.ts
core/error/: ErrorHandler.js  ErrorHandler.ts
core/mmr/: mmr.js  mmr.test.js  mmr.test.ts  mmr.ts  selector.js  selector.ts
core/performance/: chunker.perf.test.js  chunker.perf.test.ts
core/rag/: budget.js  budget.ts  dataset.test.js  dataset.test.ts  pipeline.js  pipeline.ts  prompt.js  prompt.ts  (+2 more)
coverage/: index.html
docs/: CONTINUOUS-IMPROVEMENT.md  MILESTONES.md  ONE-PAGER.md  SECURITY-PRIVACY.md  SYSTEM-DESIGN.md
scripts/: build-production.js  crypto_smoke.mjs  generate-dataset.cjs  generate-dataset.js  generate-dataset.ts  health-check.js  tsconfig.json
workers/: embedding.js  embedding.ts
(+107 files in other folders)
